--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
+    "postcss-px-to-viewport": "^1.1.1",
     "vant": "^4.8.2",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
